--- a/www.nass.gov.ng/ccfe1e17808f5610812aea56cd290eacd5dcb079.yml
+++ b/www.nass.gov.ng/ccfe1e17808f5610812aea56cd290eacd5dcb079.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:20:04 GMT
+    - Sun, 18 Jun 2017 20:02:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-5SbjJZByNpWM23ZL4Urv0; path=/
+    - PHPSESSID=vanfhOX6xiqIZr13%2CogcC2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:20:04 GMT
+recorded_at: Sun, 18 Jun 2017 20:02:15 GMT
