--- a/www.nass.gov.ng/ff615ca735e0d91b5c41dfa11210a2e71021fc22.yml
+++ b/www.nass.gov.ng/ff615ca735e0d91b5c41dfa11210a2e71021fc22.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:20:23 GMT
+    - Sun, 18 Jun 2017 20:02:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=c-TIDu2E--c43u%2CYTm66V2; path=/
+    - PHPSESSID=UsbOwcYddqxSHyO5XdK-W0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:20:23 GMT
+recorded_at: Sun, 18 Jun 2017 20:02:38 GMT
