--- a/www.nass.gov.ng/4a271fc8b646afe14241c18e67003f16bd21802e.yml
+++ b/www.nass.gov.ng/4a271fc8b646afe14241c18e67003f16bd21802e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:29:17 GMT
+    - Sun, 18 Jun 2017 20:13:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UKvafjcP5cdP1RY1lMaZ62; path=/
+    - PHPSESSID=hQrx%2CyGUQpIlmZbaoHAwD2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:29:17 GMT
+recorded_at: Sun, 18 Jun 2017 20:13:33 GMT
