--- a/www.nass.gov.ng/a84a3e66b0e40e33140ccd91ff159e8589a0a5f4.yml
+++ b/www.nass.gov.ng/a84a3e66b0e40e33140ccd91ff159e8589a0a5f4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:31:57 GMT
+    - Sun, 18 Jun 2017 20:16:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=01wJmfe3hm178e0%2CucbJo3; path=/
+    - PHPSESSID=jOds8IIljdG8ay1Akb8aI0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:31:57 GMT
+recorded_at: Sun, 18 Jun 2017 20:16:07 GMT
