--- a/www.nass.gov.ng/768d7d8bd1fb1cb3dfbfe5d66654eb4db1f95958.yml
+++ b/www.nass.gov.ng/768d7d8bd1fb1cb3dfbfe5d66654eb4db1f95958.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:38:26 GMT
+    - Sun, 18 Jun 2017 20:20:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=uh1aYGj5xpzz%2CV1vr4SJr3; path=/
+    - PHPSESSID=Htpdy8-sPyjutfs%2CW22ae1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:38:26 GMT
+recorded_at: Sun, 18 Jun 2017 20:20:40 GMT
