--- a/www.nass.gov.ng/d9381a4a19989c1316f215c75b849a8f2e913648.yml
+++ b/www.nass.gov.ng/d9381a4a19989c1316f215c75b849a8f2e913648.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:39:07 GMT
+    - Sun, 18 Jun 2017 20:21:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8zYDtrAq6JH0G8eeFsZAT1; path=/
+    - PHPSESSID=j32S%2CrcQ04frAe0IMdhqI0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:39:07 GMT
+recorded_at: Sun, 18 Jun 2017 20:21:38 GMT
