--- a/www.nass.gov.ng/2db8738f3d273aef9510c9083d1412331a635e20.yml
+++ b/www.nass.gov.ng/2db8738f3d273aef9510c9083d1412331a635e20.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:40:35 GMT
+    - Sun, 18 Jun 2017 20:22:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=QYxoKGFSVV0JAVULGIF-%2C2; path=/
+    - PHPSESSID=pR5Pxf7-xdVlfLxEuG64z2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:40:35 GMT
+recorded_at: Sun, 18 Jun 2017 20:22:27 GMT
