--- a/www.nass.gov.ng/195a719521bbde79ef5cfd96e7044ecde6e0a3ea.yml
+++ b/www.nass.gov.ng/195a719521bbde79ef5cfd96e7044ecde6e0a3ea.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:48:55 GMT
+    - Sun, 18 Jun 2017 20:33:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=an4pV3v2guSGrECSMPCwp1; path=/
+    - PHPSESSID=%2CXdPEyo3XF7hCgYUZa7qJ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:48:55 GMT
+recorded_at: Sun, 18 Jun 2017 20:33:15 GMT
