--- a/www.nass.gov.ng/2d90a7ba621d2483d535fbde4380ef3caad8604f.yml
+++ b/www.nass.gov.ng/2d90a7ba621d2483d535fbde4380ef3caad8604f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:49:49 GMT
+    - Sun, 18 Jun 2017 20:34:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8yRJ4T5qNP9J2gN-MZXTg1; path=/
+    - PHPSESSID=yjQXeytJ%2Cll7z59L0jFJa1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:49:50 GMT
+recorded_at: Sun, 18 Jun 2017 20:34:22 GMT
