--- a/www.nass.gov.ng/3bf71f6175f2f1abae7a29d4c23003808b7a2842.yml
+++ b/www.nass.gov.ng/3bf71f6175f2f1abae7a29d4c23003808b7a2842.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:54:22 GMT
+    - Sun, 18 Jun 2017 20:38:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mkfW8bFo4BjOijlg3I1PM3; path=/
+    - PHPSESSID=R6K6%2CR2jBzGHkrRE5%2CCR51; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:54:22 GMT
+recorded_at: Sun, 18 Jun 2017 20:38:04 GMT
