--- a/www.nass.gov.ng/0385ba6f7a279d51eebdd3cc262bea272595de68.yml
+++ b/www.nass.gov.ng/0385ba6f7a279d51eebdd3cc262bea272595de68.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:55:12 GMT
+    - Sun, 18 Jun 2017 20:38:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HUK5gFHO9--mE3jtQKfjc2; path=/
+    - PHPSESSID=%2C-GJjKX9Wuybm55VsOEYQ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:55:12 GMT
+recorded_at: Sun, 18 Jun 2017 20:38:58 GMT
