--- a/www.nass.gov.ng/cae08c3dba331e203e695cea9c89942a46df3731.yml
+++ b/www.nass.gov.ng/cae08c3dba331e203e695cea9c89942a46df3731.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:55:59 GMT
+    - Sun, 18 Jun 2017 20:39:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=pqQEFyJGtkhEQwqHsu%2CgQ2; path=/
+    - PHPSESSID=sRZJxht9KoH1L4nYYbVMJ3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:55:59 GMT
+recorded_at: Sun, 18 Jun 2017 20:39:36 GMT
