--- a/www.nass.gov.ng/57d222152199bf7226447ae08bf07ab540c70007.yml
+++ b/www.nass.gov.ng/57d222152199bf7226447ae08bf07ab540c70007.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:58:16 GMT
+    - Sun, 18 Jun 2017 20:41:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EOYqDo0OlnQr3-%2CikVesc1; path=/
+    - PHPSESSID=OjwUDQ99PWm3U0dNwYIZG1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:58:16 GMT
+recorded_at: Sun, 18 Jun 2017 20:41:37 GMT
