--- a/www.nass.gov.ng/dc3487bba590a629ddd590ce07eba858210ef228.yml
+++ b/www.nass.gov.ng/dc3487bba590a629ddd590ce07eba858210ef228.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 02:59:06 GMT
+    - Sun, 18 Jun 2017 20:42:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lRFeaMRRlGK%2Ckn8lqmgd-3; path=/
+    - PHPSESSID=2u66PU4zq8TRn%2Cwj7Y3Hp3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 02:59:06 GMT
+recorded_at: Sun, 18 Jun 2017 20:42:37 GMT
