--- a/www.nass.gov.ng/370e5efbb4a2787f5ac74d956ef22eb620205ad3.yml
+++ b/www.nass.gov.ng/370e5efbb4a2787f5ac74d956ef22eb620205ad3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 03:03:08 GMT
+    - Sun, 18 Jun 2017 20:47:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kyOm8TEbJ3zHqm07E5xyE3; path=/
+    - PHPSESSID=pfwJIdM4%2CNJ4W4K%2CrroXk2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 03:03:08 GMT
+recorded_at: Sun, 18 Jun 2017 20:47:18 GMT
