--- a/www.nass.gov.ng/464a6f39549e55ed5c66e93ebe58b3b2c1ca60ef.yml
+++ b/www.nass.gov.ng/464a6f39549e55ed5c66e93ebe58b3b2c1ca60ef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 03:10:03 GMT
+    - Sun, 18 Jun 2017 20:53:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2ChEhL6x%2C-m2-Xjk0ogjho1; path=/
+    - PHPSESSID=fLlzYcGulnjaS24Y-Ugzh0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 03:10:03 GMT
+recorded_at: Sun, 18 Jun 2017 20:53:28 GMT
