--- a/www.nass.gov.ng/5f323ad04f9c82e9bd541497c5457b92f01e053f.yml
+++ b/www.nass.gov.ng/5f323ad04f9c82e9bd541497c5457b92f01e053f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 03:12:26 GMT
+    - Sun, 18 Jun 2017 20:55:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UKI-v2EOwgnhvEPUkVCCe2; path=/
+    - PHPSESSID=qXCTkUVUP3MWLEU%2CTvIYs0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 03:12:26 GMT
+recorded_at: Sun, 18 Jun 2017 20:55:35 GMT
