--- a/www.nass.gov.ng/56f5baefebb221b5d6da111296808311877e46cb.yml
+++ b/www.nass.gov.ng/56f5baefebb221b5d6da111296808311877e46cb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 03:14:59 GMT
+    - Sun, 18 Jun 2017 20:58:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nUjGOsPsh2rw0tYjFHD%2C%2C1; path=/
+    - PHPSESSID=DNNndkALSWJcaT0WZNNu72; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 03:15:00 GMT
+recorded_at: Sun, 18 Jun 2017 20:58:06 GMT
