--- a/www.nass.gov.ng/e174197daa44c102facc93f4d5aa7642108e4694.yml
+++ b/www.nass.gov.ng/e174197daa44c102facc93f4d5aa7642108e4694.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 16:18:47 GMT
+    - Mon, 19 Jun 2017 11:50:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YmDLKAcCuLQNfpI6533%2CU0; path=/
+    - PHPSESSID=Idkl7F%2C8X9fxAgjJZYPBt0; path=/
     Vary:
     - Accept-Encoding
     Transfer-Encoding:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 16:18:47 GMT
+recorded_at: Mon, 19 Jun 2017 11:50:54 GMT
