--- a/www.nass.gov.ng/f4b039f5ffd9d0be34dc855274c1ff02ce28374d.yml
+++ b/www.nass.gov.ng/f4b039f5ffd9d0be34dc855274c1ff02ce28374d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 16:21:59 GMT
+    - Mon, 19 Jun 2017 11:56:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XPQZRih5ffgkTZsIKzXRz1; path=/
+    - PHPSESSID=A-i4woSwq%2C747hlcCKl1h1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 16:21:59 GMT
+recorded_at: Mon, 19 Jun 2017 11:56:34 GMT
