--- a/www.nass.gov.ng/3f7ced6a6b559d7b2eacbc0b3df122041c32d2e9.yml
+++ b/www.nass.gov.ng/3f7ced6a6b559d7b2eacbc0b3df122041c32d2e9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 16:23:18 GMT
+    - Mon, 19 Jun 2017 11:58:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zOxL0UKAzMvqW1S21hoQa0; path=/
+    - PHPSESSID=TaPznOVJcyJIYpO%2CaYqfg2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 16:23:18 GMT
+recorded_at: Mon, 19 Jun 2017 11:58:24 GMT
