--- a/www.nass.gov.ng/4e601789edff5390b03eafe205b8b9e342e3edfb.yml
+++ b/www.nass.gov.ng/4e601789edff5390b03eafe205b8b9e342e3edfb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 16:24:14 GMT
+    - Mon, 19 Jun 2017 11:59:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=M-hz%2C01EfhDNpXfXILvud2; path=/
+    - PHPSESSID=ytnOhIP54cgdmq1kafO4j2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 16:24:14 GMT
+recorded_at: Mon, 19 Jun 2017 11:59:10 GMT
