--- a/www.nass.gov.ng/e453cba713abf2acd595ca0c278bf195cede46ef.yml
+++ b/www.nass.gov.ng/e453cba713abf2acd595ca0c278bf195cede46ef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 16:33:56 GMT
+    - Mon, 19 Jun 2017 12:09:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2V0%2CSuTw6lUSlEChgrYJU2; path=/
+    - PHPSESSID=qk0MXKG-1vZTrDRSnNMrL1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 16:33:56 GMT
+recorded_at: Mon, 19 Jun 2017 12:09:20 GMT
