--- a/www.nass.gov.ng/1737ae0b0e1da5384aab8e82fb91214811eb5e36.yml
+++ b/www.nass.gov.ng/1737ae0b0e1da5384aab8e82fb91214811eb5e36.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 16:34:24 GMT
+    - Mon, 19 Jun 2017 12:09:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ijFtKzlf9q7n0U%2CeoZwyP3; path=/
+    - PHPSESSID=7Dl-ZeslFmDQJbzAJGGvR1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 16:34:24 GMT
+recorded_at: Mon, 19 Jun 2017 12:09:58 GMT
