--- a/www.nass.gov.ng/78b5cc45043355743d033ce7d5cf2ad81ae260f0.yml
+++ b/www.nass.gov.ng/78b5cc45043355743d033ce7d5cf2ad81ae260f0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 16:35:17 GMT
+    - Mon, 19 Jun 2017 12:11:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=QexKP%2CmSedaUpRg0kHHis3; path=/
+    - PHPSESSID=yB7uFfWYexg4k67r6VJgg0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 16:35:17 GMT
+recorded_at: Mon, 19 Jun 2017 12:11:16 GMT
