--- a/www.nass.gov.ng/72da7ce3d6f8034f2dc9240a7c7f27d3d5d9b01e.yml
+++ b/www.nass.gov.ng/72da7ce3d6f8034f2dc9240a7c7f27d3d5d9b01e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 16:38:39 GMT
+    - Mon, 19 Jun 2017 12:15:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ByI%2CGW6Hsmv8hFSZD-UMj0; path=/
+    - PHPSESSID=fwHXP4OzBCgqmjeZyrdOZ3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 16:38:40 GMT
+recorded_at: Mon, 19 Jun 2017 12:15:46 GMT
