--- a/www.nass.gov.ng/a841a9b40299a2dcc0b9e5d24cb2c3edd67da4c8.yml
+++ b/www.nass.gov.ng/a841a9b40299a2dcc0b9e5d24cb2c3edd67da4c8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 16:44:53 GMT
+    - Mon, 19 Jun 2017 12:23:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XMrFJZXlqm%2CRVccNj7Da03; path=/
+    - PHPSESSID=9FMNcWWjI6987rl5NxBjL2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 16:44:53 GMT
+recorded_at: Mon, 19 Jun 2017 12:23:01 GMT
