--- a/www.nass.gov.ng/3ff21be1e53725ed65595c6a732bd5e44157d5da.yml
+++ b/www.nass.gov.ng/3ff21be1e53725ed65595c6a732bd5e44157d5da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 16:49:43 GMT
+    - Mon, 19 Jun 2017 12:26:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=I3UJLqhPcYEZwKu-4QgOh1; path=/
+    - PHPSESSID=j-Jsd4u4%2CFLaErj556pZf1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 16:49:43 GMT
+recorded_at: Mon, 19 Jun 2017 12:26:26 GMT
