--- a/www.nass.gov.ng/f826858269bcf56e5518f7ad19c8282a4c4aaaf3.yml
+++ b/www.nass.gov.ng/f826858269bcf56e5518f7ad19c8282a4c4aaaf3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 16:51:33 GMT
+    - Mon, 19 Jun 2017 12:29:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=04ZQ2VcYGK4con28wm%2CtA0; path=/
+    - PHPSESSID=pkIVW2h-l1OVLA9Ml4bpI3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 16:51:33 GMT
+recorded_at: Mon, 19 Jun 2017 12:29:26 GMT
