--- a/www.nass.gov.ng/983a02e94c2734dac31dd581bdfd3041bbc310b8.yml
+++ b/www.nass.gov.ng/983a02e94c2734dac31dd581bdfd3041bbc310b8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 16:54:37 GMT
+    - Mon, 19 Jun 2017 12:32:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=m1LBfqtoNxAJS7%2CT7a4NP1; path=/
+    - PHPSESSID=rDNoqQnXg%2CKqyLGj2W%2CCh3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 16:54:37 GMT
+recorded_at: Mon, 19 Jun 2017 12:32:03 GMT
