--- a/www.nass.gov.ng/0ad6241705c263122838138a77a5268e44342723.yml
+++ b/www.nass.gov.ng/0ad6241705c263122838138a77a5268e44342723.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:03:08 GMT
+    - Mon, 19 Jun 2017 12:41:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TNICsAZU5GJTZ5ky6C%2C-73; path=/
+    - PHPSESSID=v-psoxptj5%2C-7jmuxQQpk1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:03:08 GMT
+recorded_at: Mon, 19 Jun 2017 12:41:49 GMT
