--- a/www.nass.gov.ng/3e9369afad55f00afa8f38e40a2b36cacc5c32b6.yml
+++ b/www.nass.gov.ng/3e9369afad55f00afa8f38e40a2b36cacc5c32b6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 17:03:27 GMT
+    - Mon, 19 Jun 2017 12:42:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LsNPUbftv%2CUYQDugm3R451; path=/
+    - PHPSESSID=Ny2pTfS7d3GQ%2CgOtg8mD01; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 17:03:27 GMT
+recorded_at: Mon, 19 Jun 2017 12:42:28 GMT
